--- a/modules/mobile/docs/examples/appointments/cc_appointment_request.yml
+++ b/modules/mobile/docs/examples/appointments/cc_appointment_request.yml
@@ -47,9 +47,10 @@ data:
         - 'Morning'
       friendly_location_name: 'DAYTSHR -Dayton VA Medical Center'
       locationId: '938'
-      eCheckinAllowed: false
 meta:
   errors: null
   checkinWindow:
     minutesBefore: 45
     minutesAfter: 15
+  upcomingAppointmentsCount: 1
+  upcomingDaysLimit: 7
