--- a/modules/mobile/docs/examples/appointments/partial_appointments.yml
+++ b/modules/mobile/docs/examples/appointments/partial_appointments.yml
@@ -42,9 +42,10 @@ data:
       best_time_to_call: null
       friendly_location_name: null
       locationId: '938'
-      eCheckinAllowed: false
 meta:
   errors: [{source: "VA Service"}]
   checkinWindow:
     minutesBefore: 45
     minutesAfter: 15
+  upcomingAppointmentsCount: 1
+  upcomingDaysLimit: 7
