--- a/modules/mobile/docs/examples/appointments/va_appointment_request.yml
+++ b/modules/mobile/docs/examples/appointments/va_appointment_request.yml
@@ -49,9 +49,10 @@ data:
         - Morning
       friendly_location_name: 'CHYSHR-Cheyenne VA Medical Center'
       locationId: '938'
-      eCheckinAllowed: false
 meta:
   errors: null
   checkinWindow:
     minutesBefore: 45
     minutesAfter: 15
+  upcomingAppointmentsCount: 1
+  upcomingDaysLimit: 7
