--- a/modules/claims_api/catalog-info-v2.yaml
+++ b/modules/claims_api/catalog-info-v2.yaml
@@ -5,8 +5,8 @@ metadata:
   description: The Benefits Claims API is a suite of services that enables VA developers to build applications that let Veterans view and submit certain claims and claim-related information to the VA. We provide the ability to auto-establish claims by submitting structured data that can return realtime validations, allowing for better data quality.
   annotations:
     github.com/project-slug: https://github.com/department-of-veterans-affairs/vets-api
-    datadog/production-monitor-id: '98a-nx5-icf'
-    datadog/sandbox-monitor-id: '2ne-mbd-mve' # status tab
+    datadog/production-monitor-id: '130832'
+    datadog/sandbox-monitor-id: '130865' # status tab
     hub.lighthouse.va.gov/api-id: 'claims' # release notes tab
   title: Benefits Claims API v2
   tags:
