--- a/config/features.yml
+++ b/config/features.yml
@@ -851,6 +851,10 @@ features:
     actor_type: user
     description: When enabled, the rated disabilities application uses Lighthouse instead of EVSS
     enable_in_development: true
+  schema_validation_appointments_index:
+    actor_type: user
+    description: Enables schema validation for the appointments service index fetch.
+    enable_in_development: true
   search_representative:
     actor_type: user
     description: Enable frontend application and cta for Search Representative application
