Update docs to match reality

--- a/modules/mobile/docs/schemas/Appointments.yml
+++ b/modules/mobile/docs/schemas/Appointments.yml
@@ -11,8 +11,7 @@ properties:
     type: object
     required:
       - errors
-      - minutesCheckinEarlyWindow
-      - minutesCheckinLateWindow
+      - checkinWindow
       - upcomingAppointmentsCount
       - upcomingDaysLimit
     properties:
