--- a/config/features.yml
+++ b/config/features.yml
@@ -342,6 +342,10 @@ features:
     actor_type: user
     description: enables sending new 526-ez claims to VRO Contention Classification service for more accurate classification entry.
     enable_in_development: true
+  contention_classification_claim_linker:
+    actor_type: user
+    description: enables sending 526 claim id and vbms submitted claim id to Contention Classification service for linking/monitoring.
+    enable_in_development: true
   disability_526_maximum_rating:
     actor_type: user
     description: enables displaying a short education blurb alongside rated disabilities already at maximum rating.
