--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -154,6 +154,7 @@ app/controllers/v1/notice_of_disagreements_controller.rb @department-of-veterans
 app/controllers/v1/sessions_controller.rb  @department-of-veterans-affairs/vsp-identity
 app/controllers/v1/supplemental_claims_controller.rb @department-of-veterans-affairs/benefits-decision-reviews-be @department-of-veterans-affairs/backend-review-group
 app/controllers/v1/supplemental_claims @department-of-veterans-affairs/benefits-decision-reviews-be @department-of-veterans-affairs/backend-review-group
+app/controllers/v0/account_controls_controller.rb @department-of-veterans-affairs/vsp-identity
 app/mailers/application_mailer.rb @department-of-veterans-affairs/va-api-engineers @department-of-veterans-affairs/backend-review-group
 app/mailers/ch31_submissions_report_mailer.rb @department-of-veterans-affairs/benefits-non-disability @department-of-veterans-affairs/va-api-engineers @department-of-veterans-affairs/backend-review-group
 app/mailers/create_daily_spool_files_mailer.rb @department-of-veterans-affairs/my-education-benefits @department-of-veterans-affairs/va-api-engineers @department-of-veterans-affairs/backend-review-group
@@ -439,6 +440,7 @@ app/serializers/supporting_evidence_attachment_serializer.rb @department-of-vete
 app/serializers/tracking_serializer.rb @department-of-veterans-affairs/vfs-mhv-secure-messaging @department-of-veterans-affairs/va-api-engineers @department-of-veterans-affairs/backend-review-group
 app/serializers/triage_team_serializer.rb @department-of-veterans-affairs/vfs-mhv-secure-messaging @department-of-veterans-affairs/va-api-engineers @department-of-veterans-affairs/backend-review-group
 app/serializers/user_serializer.rb @department-of-veterans-affairs/vsp-identity
+app/serializers/user_verification_serializer.rb @department-of-veterans-affairs/vsp-identity
 app/serializers/valid_va_file_number_serializer.rb @department-of-veterans-affairs/vfs-authenticated-experience-backend @department-of-veterans-affairs/va-api-engineers @department-of-veterans-affairs/backend-review-group
 app/serializers/zipcodes_serializer.rb @department-of-veterans-affairs/vfs-facilities-frontend @department-of-veterans-affairs/va-api-engineers @department-of-veterans-affairs/backend-review-group
 app/services/acceptable_verified_credential_adoption_service.rb @department-of-veterans-affairs/vsp-identity
@@ -1025,6 +1027,7 @@ spec/controllers/application_controller_spec.rb @department-of-veterans-affairs/
 spec/controllers/concerns/third_party_transaction_logging_spec.rb @department-of-veterans-affairs/backend-review-group @department-of-veterans-affairs/va-api-engineers
 spec/controllers/inherited_proofing_controller_spec.rb @department-of-veterans-affairs/vsp-identity
 spec/controllers/sign_in @department-of-veterans-affairs/vsp-identity
+spec/controllers/v0/account_controls_controller_spec.rb @department-of-veterans-affairs/vsp-identity
 spec/controllers/v0/apps_controller_spec.rb @department-of-veterans-affairs/lighthouse-pivot
 spec/controllers/v0/ask_va @department-of-veterans-affairs/ask-va-team @department-of-veterans-affairs/va-api-engineers @department-of-veterans-affairs/backend-review-group
 spec/controllers/v0/benefits_claims_controller_spec.rb @department-of-veterans-affairs/benefits-management-tools-be @department-of-veterans-affairs/va-api-engineers @department-of-veterans-affairs/backend-review-group
@@ -1625,6 +1628,7 @@ spec/serializers/sign_in @department-of-veterans-affairs/vsp-identity
 spec/serializers/sign_in/introspect_serializer_spec.rb @department-of-veterans-affairs/vsp-identity
 spec/serializers/triage_team_serializer_spec.rb @department-of-veterans-affairs/vfs-mhv-secure-messaging @department-of-veterans-affairs/va-api-engineers @department-of-veterans-affairs/backend-review-group
 spec/serializers/user_serializer_spec.rb @department-of-veterans-affairs/vsp-identity
+spec/serializers/user_verification_serializer_spec.rb @department-of-veterans-affairs/vsp-identity
 spec/services/acceptable_verified_credential_adoption_service_spec.rb @department-of-veterans-affairs/vsp-identity
 spec/services/bgs  @department-of-veterans-affairs/Benefits-Team-1 @department-of-veterans-affairs/va-api-engineers @department-of-veterans-affairs/backend-review-group
 spec/services/claim_fast_tracking @department-of-veterans-affairs/Disability-Experience @department-of-veterans-affairs/va-api-engineers @department-of-veterans-affairs/backend-review-group
