--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1350,7 +1350,7 @@ vanotify:
 va_forms:
   drupal_username: ~
   drupal_password: ~
-  drupal_url: http://internal-dsva-vagov-dev-cms-812329399.us-gov-west-1.elb.amazonaws.com
+  drupal_url: ~
   # A notification for when a forms url has changed
   slack:
     enabled: false
