--- a/config/features.yml
+++ b/config/features.yml
@@ -1301,3 +1301,8 @@ features:
   vye_load_scrypt_config:
     actor_type: user
     description: If enabled, allowed for scrypt configs to be loaded.
+  vye_request_allowed:
+    actor_type: user
+    description: >-
+      Master toggle for the VYE (Verify Your Enrollment) project.
+      If enabled, requests will be allowed to reach the controllers, otherwise a 400 (Bad Request) will be returned.
