--- a/spec/support/vcr_cassettes/va_forms/forms_500_error.yml
+++ b/spec/support/vcr_cassettes/va_forms/forms_500_error.yml
@@ -34,45 +34,32 @@ http_interactions:
       - "*/*"
   response:
     status:
-      code: 200
-      message: OK
+      code: 500
+      message: 'Internal Server Error'
     headers:
       Date:
       - Mon, 29 Mar 2021 19:45:00 GMT
       Content-Type:
       - application/json
       Content-Length:
-      - '2321'
+      - '187'
       Connection:
       - keep-alive
       Server:
       - Server
       X-Content-Type-Options:
       - nosniff
-      Content-Language:
-      - en
       X-Frame-Options:
       - SAMEORIGIN
-      Expires:
-      - Sun, 19 Nov 1978 05:00:00 GMT
     body:
       encoding: UTF-8
-      string: '{"data":{"nodeQuery":{"entities":[{"fieldVaFormNumber":"26-8599","fieldVaFormRowId":1352,"entityBundle":"va_form","entityId":"6025","entityPublished":true,"entityUrl":{"path":"\/find-forms\/about-form-26-8599"},"entityTranslations":[],"entityRevisions":{"entities":[{"entityChanged":"2020-06-22T16:05:31-0400","fieldVaFormName":"Manufactured
-        Home Warranty (Limited Warranty)"},{"entityChanged":"2020-06-22T16:28:37-0400","fieldVaFormName":"Manufactured
-        Home Warranty (Limited Warranty)"},{"entityChanged":"2020-06-24T16:24:00-0400","fieldVaFormName":"Manufactured
-        Home Warranty (Limited Warranty)"},{"entityChanged":"2020-06-25T16:12:18-0400","fieldVaFormName":"Manufactured
-        Home Warranty (Limited Warranty)"},{"entityChanged":"2020-07-21T12:54:22-0400","fieldVaFormName":"Manufactured
-        Home Warranty (Limited Warranty)"},{"entityChanged":"2020-07-21T16:56:30-0400","fieldVaFormName":"Manufactured
-        Home Warranty (Limited Warranty)"},{"entityChanged":"2020-07-23T14:11:51-0400","fieldVaFormName":"Manufactured
-        Home Warranty (Limited Warranty)"},{"entityChanged":"2020-08-10T17:26:56-0400","fieldVaFormName":"Manufactured
-        Home Warranty (Limited Warranty)"},{"entityChanged":"2020-08-11T16:38:09-0400","fieldVaFormName":"Manufactured
-        Home Warranty (Limited Warranty)"},{"entityChanged":"2020-09-17T13:36:55-0400","fieldVaFormName":"Manufactured
-        Home Warranty (Limited Warranty)"}]},"title":"About VA Form 26-8599","status":true,"revisionLog":"Update
-        of form metadata from Forms DB.","fieldVaFormDeleted":false,"fieldVaFormDeletedDate":null,"fieldVaFormLanguage":"en","fieldVaFormName":"Manufactured
-        Home Warranty (Limited Warranty)","fieldVaFormTitle":"Manufactured Home Warranty
-        (Limited Warranty)","fieldVaFormType":"benefit","fieldVaFormUrl":{"uri":"http:\/\/www.vba.va.gov\/pubs\/forms\/26-8599.pdf"},"fieldVaFormUsage":null,"fieldVaFormToolIntro":null,"fieldVaFormToolUrl":null,"fieldBenefitCategories":[{"targetId":74,"entity":{"entityLabel":"VA
-        housing assistance","fieldHomePageHubLabel":"Housing assistance"}}],"fieldVaFormRevisionDate":null,"fieldVaFormIssueDate":{"value":"2002-01-07","date":"2002-01-07
-        12:00:00 UTC"},"fieldVaFormNumPages":1,"fieldVaFormLinkTeasers":[],"fieldVaFormRelatedForms":[],"fieldVaFormAdministration":{"entity":{"entityLabel":"Veterans
-        Benefits Administration"}},"changed":1613538230}]}}}'
+      string: |-
+        {
+          "errors": [{
+            "status": "500",
+            "title": "Internal Server Error",
+            "detail": "Internal Server Error"
+          }]
+        }
   recorded_at: Mon, 29 Mar 2021 19:45:00 GMT
 recorded_with: VCR 6.0.0
