--- a/config/features.yml
+++ b/config/features.yml
@@ -796,10 +796,6 @@ features:
     description: Use a hub style page as the root page for the profile application
     enable_in_development: true
     actor_type: user
-  profile_use_notification_settings_checkboxes:
-    actor_type: user
-    description: Use checkboxes for Notification Settings in Profile - Default Send and Email Channel
-    enable_in_development: true
   profile_use_vafsc:
     description: Use VA Forms System Core for forms instead of schema based forms
     actor_type: user
@@ -1294,8 +1290,6 @@ features:
   virtual_agent_enable_nlu_pva_testing:
     actor_type: user
     description: If enabled, allows for connecting to NLU PVA
-  vye_request_allowed:
+  vye_load_scrypt_config:
     actor_type: user
-    description: >-
-      Master toggle for the VYE (Verify Your Enrollment) project.
-      If enabled, requests will be allowed to reach the controllers, otherwise a 400 (Bad Request) will be returned.
+    description: If enabled, allowed for scrypt configs to be loaded.
