--- a/config/features.yml
+++ b/config/features.yml
@@ -246,6 +246,9 @@ features:
   claims_claim_uploader_use_bd:
     actor_type: user
     description: Use BDS instead of EVSS to upload to VBMS.
+  claims_load_testing:
+    actor_type: user
+    description: Enables the ability to skip jobs for load testing
   claims_status_v1_bgs_enabled:
     actor_type: user
     description: enables calling BGS instead of EVSS for the claims status v1.
@@ -1290,6 +1293,8 @@ features:
   virtual_agent_enable_nlu_pva_testing:
     actor_type: user
     description: If enabled, allows for connecting to NLU PVA
-  vye_load_scrypt_config:
+  vye_request_allowed:
     actor_type: user
-    description: If enabled, allowed for scrypt configs to be loaded.
+    description: >-
+      Master toggle for the VYE (Verify Your Enrollment) project.
+      If enabled, requests will be allowed to reach the controllers, otherwise a 400 (Bad Request) will be returned.
