--- a/config/features.yml
+++ b/config/features.yml
@@ -1234,7 +1234,7 @@ features:
     description: If enabled, the submission form526 record will be created, but there will be submission job
   disability_compensation_remove_pciu:
     actor_type: user
-    description: If enabled, the submission form526 record will be created, but there will be submission job
+    description: If enabled, VA Profile is used to populate contact information- without PCIU calls (status quo)
   virtual_agent_fetch_jwt_token:
     actor_type: user
     description: Enable the fetching of a JWT token to access MAP environment
