--- a/spec/support/vcr_cassettes/hca/sigi.yml
+++ b/spec/support/vcr_cassettes/hca/sigi.yml
@@ -7,7 +7,7 @@ http_interactions:
       encoding: UTF-8
       string: <?xml version="1.0" encoding="UTF-8"?><soap:Envelope xmlns:xsd="http://www.w3.org/2001/XMLSchema"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:ns1="http://va.gov/schema/esr/voa/v1"
-        xmlns:soap="http://schemas.xmlsoap.org/soap/envelope/" xmlns:tns="http://va.gov/service/esr/voa/v1" xmlns:tns="http://va.gov/service/esr/voa/v1"><soap:Body><ns1:submitFormRequest><va:form
+        xmlns:soap="http://schemas.xmlsoap.org/soap/envelope/" xmlns:tns="http://va.gov/service/esr/voa/v1"><soap:Body><ns1:submitFormRequest><va:form
         xmlns:va="http://va.gov/schema/esr/voa/v1"><va:formIdentifier><va:type>100</va:type><va:value>1010EZ</va:value><va:version>2986360436</va:version></va:formIdentifier><va:summary><eeSummary:demographics
         xmlns:eeSummary="http://jaxws.webservices.esr.med.va.gov/schemas"><eeSummary:appointmentRequestResponse>true</eeSummary:appointmentRequestResponse><eeSummary:contactInfo><eeSummary:addresses><eeSummary:address><eeSummary:city>Ontario</eeSummary:city><eeSummary:country>CAN</eeSummary:country><eeSummary:line1>123
         NW 5th St</eeSummary:line1><eeSummary:provinceCode>ON</eeSummary:provinceCode><eeSummary:postalCode>21231</eeSummary:postalCode><eeSummary:addressTypeCode>P</eeSummary:addressTypeCode></eeSummary:address></eeSummary:addresses><eeSummary:emails><eeSummary:email><eeSummary:address>foo@example.com</eeSummary:address><eeSummary:type>1</eeSummary:type></eeSummary:email></eeSummary:emails><eeSummary:phones><eeSummary:phone><eeSummary:phoneNumber>1231241234</eeSummary:phoneNumber><eeSummary:type>1</eeSummary:type></eeSummary:phone><eeSummary:phone><eeSummary:phoneNumber>1235551234</eeSummary:phoneNumber><eeSummary:type>4</eeSummary:type></eeSummary:phone></eeSummary:phones></eeSummary:contactInfo><eeSummary:ethnicity>2135-2</eeSummary:ethnicity><eeSummary:maritalStatus>U</eeSummary:maritalStatus><eeSummary:preferredFacility>608</eeSummary:preferredFacility><eeSummary:races><eeSummary:race>1002-5</eeSummary:race><eeSummary:race>2028-9</eeSummary:race><eeSummary:race>2054-5</eeSummary:race><eeSummary:race>2076-8</eeSummary:race><eeSummary:race>2106-3</eeSummary:race></eeSummary:races><eeSummary:acaIndicator>false</eeSummary:acaIndicator></eeSummary:demographics><eeSummary:enrollmentDeterminationInfo
@@ -30,7 +30,7 @@ http_interactions:
       Date:
       - Tue, 01 Nov 2022 15:07:20 GMT
       Content-Length:
-      - '5413'
+      - '5368'
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
   response:
