--- a/spec/support/vcr_cassettes/preneeds/burial_forms/creates_a_pre_need_burial_form.yml
+++ b/spec/support/vcr_cassettes/preneeds/burial_forms/creates_a_pre_need_burial_form.yml
@@ -7,7 +7,7 @@ http_interactions:
       encoding: UTF-8
       string: <?xml version="1.0" encoding="UTF-8"?><env:Envelope xmlns:xsd="http://www.w3.org/2001/XMLSchema"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:tns="http://service.soa.eoas.cem.va.gov/"
-        xmlns:env="http://schemas.xmlsoap.org/soap/envelope/" xmlns:wssutil="http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-wssecurity-utility-1.0.xsd" xmlns:wsp="http://schemas.xmlsoap.org/ws/2004/09/policy" xmlns:soap="http://schemas.xmlsoap.org/wsdl/soap/"><env:Body><tns:receivePreNeedApplication><preNeedRequest><applicant><applicantEmail>hg@hotmail.com</applicantEmail><applicantPhoneNumber>555-555-5555
+        xmlns:env="http://schemas.xmlsoap.org/soap/envelope/"><env:Body><tns:receivePreNeedApplication><preNeedRequest><applicant><applicantEmail>hg@hotmail.com</applicantEmail><applicantPhoneNumber>555-555-5555
         - 234</applicantPhoneNumber><applicantRelationshipToClaimant>Self</applicantRelationshipToClaimant><completingReason>I
         don&#39;t know</completingReason><mailingAddress><address1>street 1</address1><address2>street2
         1</address2><city>NY</city><countryCode>USA</countryCode><postalZip>10000</postalZip><state>NY</state></mailingAddress><name><firstName>first
@@ -35,7 +35,7 @@ http_interactions:
       Date:
       - Thu, 13 Aug 2020 03:25:19 GMT
       Content-Length:
-      - '3733'
+      - '3526'
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
   response:
