Add service names->ids mappings for MHV pagerduty maintenance windows

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -878,6 +878,10 @@ maintenance:
     logingov: P2SHMM9
     mvi: PCIPVGJ
     mhv: PP2ZZ2V
+    mhv_platform: PB0YR5A
+    mhv_meds: PHQN9X3
+    mhv_mr: PELVB5Q
+    mhv_sm: P7LKM9I
     search: PRG8HJI
     tims: PUL8OQ4
     vet360: PHVOGQ1
