--- a/config/features.yml
+++ b/config/features.yml
@@ -1101,6 +1101,10 @@ features:
     actor_type: user
     enable_in_development: true
     description: Toggle for Start Scheduling action link.
+  va_online_scheduling_physical_location:
+    actor_type: user
+    enable_in_development: true
+    description: Toggle to display the physical location of an appointment.
   va_view_dependents_access:
     actor_type: user
     description: Allows us to gate the View/ Modify dependents content in a progressive rollout
