--- a/config/features.yml
+++ b/config/features.yml
@@ -1005,6 +1005,10 @@ features:
     actor_type: user
     description: Allows veterans to cancel VA appointments
     enable_in_development: true
+  va_online_scheduling_clinic_filtering:
+    actor_type: user
+    description: Allows clinic selection filtering by stop codes
+    enable_in_development: true
   va_online_scheduling_community_care:
     actor_type: user
     description: Allows veterans to submit requests for Community Care appointments
